
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int COMP_LEAK_GENERAL ;
 int COMP_LEAK_LWIP ;
 int CONFIG_LWIP_MAX_SOCKETS ;
 int CONFIG_UNITY_CRITICAL_LEAK_LEVEL_LWIP ;
 int IPPROTO_IP ;
 int PF_INET ;
 int PF_INET6 ;
 int SOCK_DGRAM ;
 int SOCK_STREAM ;
 int TYPE_LEAK_CRITICAL ;
 int close (int) ;
 int esp_netif_init () ;
 int portTICK_RATE_MS ;
 int printf (char*) ;
 int socket (int,int,int ) ;
 int test_utils_set_leak_level (int ,int ,int ) ;
 int unity_reset_leak_checks () ;
 int vTaskDelay (int) ;

void test_case_uses_tcpip(void)
{

    esp_netif_init();



    int sockets[CONFIG_LWIP_MAX_SOCKETS];
    for (int i = 0; i < CONFIG_LWIP_MAX_SOCKETS; i++) {
        int type = (i % 2 == 0) ? SOCK_DGRAM : SOCK_STREAM;
        int family = (i % 3 == 0) ? PF_INET6 : PF_INET;
        sockets[i] = socket(family, type, IPPROTO_IP);
    }
    for (int i = 0; i < CONFIG_LWIP_MAX_SOCKETS; i++) {
        close(sockets[i]);
    }


    vTaskDelay(25 / portTICK_RATE_MS);

    printf("Note: esp_netif_init() has been called. Until next reset, TCP/IP task will periodicially allocate memory and consume CPU time.\n");


    unity_reset_leak_checks();
    test_utils_set_leak_level(0, TYPE_LEAK_CRITICAL, COMP_LEAK_GENERAL);
    test_utils_set_leak_level(CONFIG_UNITY_CRITICAL_LEAK_LEVEL_LWIP, TYPE_LEAK_CRITICAL, COMP_LEAK_LWIP);
}
